[Bump] dependencies Thanks gradle making projekts properties access harder -.- Drop commons-collections4 dependency