@@ -78,7 +78,7 @@ public class ListPlayerSubCommand extends ASubCommand {
                         if (args.length >= 4) {
                             if (Utils.isInt(args[3])) {
                                 //limit page to how many exits
-                                pageNow = Math.max(1, Math.min(numPages, Integer.parseInt(args[3])));
+                                pageNow = Math.clamp(Integer.parseInt(args[3]), 1, numPages);
                             } else {
                                 plugin.getMessageManager().sendLang(audience, LangPath.ARG_NOT_A_NUMBER,
                                     Placeholder.unparsed(PlaceHolderKey.TEXT.getKey(), args[3]));
